# minijson

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  minijson.pyx  setup.cfg  setup.py
.github/workflows/: ci.yml  main.yml
docs/: changelog.rst  conf.py  index.rst  specification.rst  usage.rst
tests/: test_minijson.py
