# coding: utf-8
[metadata]
version = 3.1.0
name = minijson
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Piotr Maślanka
license_files =
    LICENSE
author_email = piotr.maslanka@dronehub.ai
description = A library for serializing JSON in a small binary format
url = https://git.dms-serwis.com.pl/smokserwis/minijson
project_urls =
    Documentation = https://smokserwis.docs.smok.co/minijson
	Code = https://git.dms-serwis.com.pl/smokserwis/minijson
	Issue tracker = https://git.dms-serwis.com.pl/smokserwis/minijson/-/issues
classifier =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 0

[options]
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
